@@ -135,6 +135,9 @@ inline swf_mask_v2f_t swf_mask_vert(swf_mask_appdata_t IN) {
 
 inline fixed4 swf_frag(swf_v2f_t IN) : SV_Target {
 	fixed4 c = tex2D(_MainTex, IN.uv);
+	if ( _ExternalAlpha ) {
+		c.a *= tex2D(_AlphaTex, IN.uv).r;
+	}
 	if ( c.a > 0.01 ) {
 		c = c * IN.mulcolor + IN.addcolor;
 	}
@@ -144,6 +147,9 @@ inline fixed4 swf_frag(swf_v2f_t IN) : SV_Target {
 
 inline fixed4 swf_grab_frag(swf_grab_v2f_t IN) : SV_Target {
 	fixed4 c = tex2D(_MainTex, IN.uv);
+	if ( _ExternalAlpha ) {
+		c.a *= tex2D(_AlphaTex, IN.uv).r;
+	}
 	if ( c.a > 0.01 ) {
 		c = c * IN.mulcolor + IN.addcolor;
 		c = grab_blend(_GrabTexture, IN.screenpos, c);
@@ -154,6 +160,9 @@ inline fixed4 swf_grab_frag(swf_grab_v2f_t IN) : SV_Target {
 
 inline fixed4 swf_mask_frag(swf_mask_v2f_t IN) : SV_Target {
 	fixed4 c = tex2D(_MainTex, IN.uv);
+	if ( _ExternalAlpha ) {
+		c.a *= tex2D(_AlphaTex, IN.uv).r;
+	}
 	if ( c.a < 0.01 ) {
 		discard;
 	}
