@@ -344,12 +344,19 @@ namespace FTRuntime {
 					_curPropBlock = new MaterialPropertyBlock();
 				}
 				_meshRenderer.GetPropertyBlock(_curPropBlock);
-				_curPropBlock.SetColor(
-					"_Tint",
-					tint);
-				_curPropBlock.SetTexture(
-					"_MainTex",
-					clip && clip.Atlas ? clip.Atlas : Texture2D.whiteTexture);
+				_curPropBlock.SetColor("_Tint", tint);
+				var sprite = clip ? clip.Sprite : null;
+				var atlas  = sprite && sprite.texture ? sprite.texture : Texture2D.whiteTexture;
+				var atlasA = sprite ? sprite.associatedAlphaSplitTexture : null;
+				if ( atlas ) {
+					_curPropBlock.SetTexture("_MainTex", atlas);
+				}
+				if ( atlasA ) {
+					_curPropBlock.SetTexture("_AlphaTex", atlasA);
+					_curPropBlock.SetFloat("_ExternalAlpha", 1.0f);
+				} else {
+					_curPropBlock.SetFloat("_ExternalAlpha", 0.0f);
+				}
 				_meshRenderer.SetPropertyBlock(_curPropBlock);
 			}
 		}
