@@ -6,4 +6,4 @@ EditorBuildSettings:
   serializedVersion: 2
   m_Scenes:
   - enabled: 1
-    path: Assets/FlashTools/Example/Scene.unity
+    path: Assets/DevTests/Scenes/Scene.unity
