@@ -1,4 +1,10 @@
 -------------------
+-- Version 1.X.X --
+-------------------
+
+ETC separated alpha support
+
+-------------------
 -- Version 1.2.0 --
 -------------------
 
